--- a/siti/sito/html/spettacoliEng.html
+++ b/siti/sito/html/spettacoliEng.html
@@ -17,7 +17,7 @@
 	<ul>
  	 <li><div class="rosso"><a class="active" href="HomeEng.html">Home</div></a></li>
          <li><div class="rosa"><a href="corsiEng.html">Courses</div></a></li>
- 	 <li><div class="verde"><a href="spettacoliEng.html">Shows 2016</a></div></li>
+ 	 <li><div class="verde"><a href="spettacoliEng.html">Shows 2016-2017</a></div></li>
  	 <li><div class="giallo"><a href="studi%20estiviEng.html">Study Holidays</a></div></li>
 	 <li><div class="blu"><a href="storiaEng.html">History</div></a></li>
 	 <li><div class="photo"><a href="galleriaEng.html">Gallery</div></a></li>
